--- a/BrenBalajadia/.lh/.env.json
+++ b/BrenBalajadia/.lh/.env.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 2,
             "patches": [
                 {
                     "date": 1730375881702,
@@ -12,6 +12,10 @@
                 {
                     "date": 1730376185334,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -23,9 +23,9 @@\n \n DB_CONNECTION=mysql\n DB_HOST=127.0.0.1\n DB_PORT=3306\n-DB_DATABASE=brenbaljadias\n+DB_DATABASE=arvickmercadoresume\n DB_USERNAME=root\n DB_PASSWORD=\n \n SESSION_DRIVER=database\n"
+                },
+                {
+                    "date": 1730380503712,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -23,9 +23,9 @@\n \n DB_CONNECTION=mysql\n DB_HOST=127.0.0.1\n DB_PORT=3306\n-DB_DATABASE=arvickmercadoresume\n+DB_DATABASE=brenbaljadia\n DB_USERNAME=root\n DB_PASSWORD=\n \n SESSION_DRIVER=database\n"
                 }
             ],
             "date": 1730375881701,
